# xwiimote-mouse-driver

./: CMakeLists.txt  design.md  protocol.md  readme.md
.github/workflows/: static.yml
docs/: Makefile  Pipfile
docs/source/: conf.py  driverconfig.rst  gettingstarted.rst  index.rst  pairingwiimote.rst
src/: controlsocket.cpp  controlsocket.hpp  device.cpp  device.hpp  drivermain.cpp  driveroptparse.hpp  intlinalg.hpp  mouse-test.cpp  settings.cpp  settings.hpp  stringtools.cpp  testmaths.cpp  virtualmouse.hpp  xwiimote-test.cpp
src/driver/: base.hpp  controlsocket.cpp  controlsocket.hpp  device.cpp  device.hpp  driverextra.cpp  driverextra.hpp  drivermain.cpp  driveroptparse.hpp  floatlinalg.hpp  intlinalg.hpp  settings.cpp  settings.hpp  stringtools.cpp  stringtools.hpp  virtualmouse.cpp  virtualmouse.hpp
src/driver/filterlayers/: base.hpp  buttons.hpp  clustering.cpp  clustering.hpp  predictive.cpp  predictive.hpp  smoother.cpp  smoother.hpp  towedcircle.cpp  towedcircle.hpp  unrotate.hpp
src/driver/keymap/: 01-keyboard.txt  01-mouse.txt  02-extended-keyboard.txt  img-rle64.py  process-keymaps.py  process.py  readme.md
src/py/: configurator.py
src/testapps/: mouse-test.cpp  testmaths.cpp  xwiimote-test.cpp
